Fix items not aligned properly when using a flex-container

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -24,6 +24,7 @@ form .form-row p {
 
 .flex-container {
     display: flex;
+    align-items: center;
 }
 
 .form-multiline {
